# pal

./: .clang-format  .clang-tidy  .clang-tidy-test  .editorconfig  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CNAME  LICENSE  Makefile  README.md  ThirdPartySources.txt  address.html  address.js  address__dep__incl.map  address__dep__incl.md5  address__incl.map  address__incl.md5  address__v4.html  address__v4.js  address__v4__dep__incl.map  address__v4__dep__incl.md5  address__v4__incl.map  address__v4__incl.md5  address__v6.html  address__v6.js  address__v6__dep__incl.map  address__v6__dep__incl.md5  address__v6__incl.map  address__v6__incl.md5  annotated.html  annotated_dup.js  assert.html  assert.js  assert__dep__incl.map  assert__dep__incl.md5  assert__incl.map  (+480 more)
.github/workflows/: build.yaml  build.yml  ci.yml  coverage.yml  docs.yaml  fuzz.yml  lint.yml  sanitize.yml
bench/: conv_base64.cpp  conv_hex.cpp  crypto_hash.cpp  crypto_hmac.cpp  expected.cpp  hash.cpp  invoke.cpp  list.cmake  request_handler.cpp
cmake/: Doxyfile.in  catchorg_catch2.cmake  coverage.cmake  cxx.cmake  fuzz.cmake  g++.cmake  google_benchmark.cmake  iwyu.cmake  linux.cmake  macos.cmake  project_version.cmake  system_libs.cmake  test.cmake  tidy.cmake
cmake/actions/: all.cmake  coverage-html.cmake  coverage-lcov.cmake  coverage.cmake  format-check.cmake  format.cmake  fuzz-check.cmake  fuzz-list.cmake  fuzz-reduce.cmake  fuzz-run.cmake  help.cmake  ninja.cmake  sanitize.cmake  smoke.cmake  tidy.cmake
cmake/cxx/: benchmark.cmake  clang.cmake  doc.cmake  executable.cmake  gnu.cmake  library.cmake  msvc.cmake  test.cmake
pal/: __diagnostic  __diagnostic.hpp  __diagnostic.test.cpp  __expected  __platform_sdk  __platform_sdk.hpp  assert  assert.test.cpp  buffer  buffer.hpp  buffer.test.cpp  byte_order  byte_order.hpp  byte_order.test.cpp  cancel_token  cancel_token.test.cpp  codec.bench.cpp  codec.hpp  codec.test.cpp  codec_base64.cpp  codec_base64.fuzz.cpp  codec_hex.cpp  codec_hex.fuzz.cpp  conv  conv.bench.cpp  conv.test.cpp  conv_base64.cpp  conv_hex.cpp  error  error.cpp  error.hpp  error.test.cpp  expect  expect.test.cpp  expected  expected.bench.cpp  expected.test.cpp  fuzz.hpp  hash  hash.bench.cpp  (+51 more)
pal/__bits/: lib  platform_sdk  ref
pal/async/: __async.hpp  (+29 more)
samples/: command_line  list.cmake  metrics  thread  udp_relay_client.cpp  udp_relay_server_global_map.cpp  udp_relay_server_local_map.cpp  udp_relay_server_multi_send.cpp
scripts/: make_ca.sh  travis_install.sh  travis_script.sh  travis_success.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_0.js  (+75 more)
(+238 files in other folders)
